Bug 419678 - The behavior window didn't appeare after clicking the dock settings button.
Summary: The behavior window didn't appeare after clicking the dock settings button.
Status: CLOSED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: 0.9.10
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-04-05 13:20 UTC by Roman
Modified: 2020-04-12 08:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.11
Sentry Crash Report:


Attachments
Bug issue (173.52 KB, image/png)
2020-04-05 13:20 UTC, Roman
Details
Debug error (291.37 KB, image/png)
2020-04-05 13:35 UTC, Roman
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman 2020-04-05 13:20:49 UTC
Created attachment 127302 [details]
Bug issue

SUMMARY


STEPS TO REPRODUCE
1. Hover the mouse over the dock.
2. Right-click on the "Dock settings"
3. Verify the behavior window didn't appear after clicking the dock settings button.

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Michail Vourlakos 2020-04-05 13:26:59 UTC
Run latte-dock from terminal with "latte-dock -d"
does any error appear after triggering Dock Settings?
Comment 2 Roman 2020-04-05 13:35:19 UTC
Created attachment 127303 [details]
Debug error

Hi. I have a warning in the terminal.

[warning 16:34:30.9797] - file:///usr/share/plasma/shells/org.kde.latte.shell/contents/configuration/LatteDockConfiguration.qml:46:36: Invalid alias target location: mask 
         property alias backgroundMask: backgroundFrameSvgItem.mask 
                                        ^
[debug 16:34:30.971971] - dock config view : initialization ended...
Comment 3 Michail Vourlakos 2020-04-05 15:22:18 UTC
This is new, what is your kde frameworks version?
Comment 4 Roman 2020-04-05 15:26:02 UTC
KDE Frameworks: 5.47.0
KDE Plasma: 5.12.9
Comment 5 Michail Vourlakos 2020-04-05 15:50:31 UTC
Git commit 4defd31669be679a81bfc1ea91c5827609d9d705 by Michail Vourlakos.
Committed on 05/04/2020 at 15:48.
Pushed by mvourlakos into branch 'master'.

fix compatibility with frameworks 5.38

--FrameSvgItem::mask() was introduced after
frameworks 5.58. Restore a bit the old
implementation

FIXED-IN:0.9.11

M  +21   -14   app/view/settings/primaryconfigview.cpp
M  +3    -0    app/view/settings/primaryconfigview.h
M  +27   -14   app/view/settings/secondaryconfigview.cpp
M  +2    -0    app/view/settings/secondaryconfigview.h
M  +0    -5    shell/package/contents/configuration/LatteDockConfiguration.qml
M  +0    -5    shell/package/contents/configuration/LatteDockSecondaryConfiguration.qml

https://commits.kde.org/latte-dock/4defd31669be679a81bfc1ea91c5827609d9d705
Comment 6 Michail Vourlakos 2020-04-05 15:56:02 UTC
Git commit e38d5bc5a3bfbd12393484c4f9101b8a8cfd7840 by Michail Vourlakos.
Committed on 05/04/2020 at 15:52.
Pushed by mvourlakos into branch 'v0.9'.

fix compatibility with frameworks 5.38

--FrameSvgItem::mask() was introduced after
frameworks 5.58. Restore a bit the old
implementation

FIXED-IN:0.9.11

M  +21   -15   app/view/settings/primaryconfigview.cpp
M  +3    -0    app/view/settings/primaryconfigview.h
M  +21   -14   app/view/settings/secondaryconfigview.cpp
M  +2    -0    app/view/settings/secondaryconfigview.h
M  +0    -5    shell/package/contents/configuration/LatteDockConfiguration.qml
M  +0    -5    shell/package/contents/configuration/LatteDockSecondaryConfiguration.qml

https://commits.kde.org/latte-dock/e38d5bc5a3bfbd12393484c4f9101b8a8cfd7840
Comment 7 Roman 2020-04-12 08:05:37 UTC
Hi. Fix from the v0.9.11 version works perfectly.
Thanks a lot!!!